# agenty

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  langgraph.json  log_config.yaml  pyproject.toml  run_agent_local.py  server.py  test_log.py
.cursor/rules/: agent.rule  improvements.rule  llm.rule  prompts.rule  py.mdc  python.rule  state.rule  tests.rule
docs/: API.md  PROJECT_STRUCTURE.md  System Design: Agentic PPA Insurance Quoting Workflow (v2.0 - Final).md  dev_log.md  dev_logs.md  google_genai_migration.md  hitl_design_v2.md  hitl_v2_server_api.md  hitl_v2_server_integration_test_runbook.md  langserve_testing.md  system_design.md  todo.md
docs/UI/: demo.html
docs/agentic_v2/: Milestone 5-6.md  Milestone_5-6_Implementation_Plan.md  Milestones.md
docs/visualizations/: complete_info_state.json  missing_info_result.html  multi_turn_final_state.json  non_ppa_result.html  non_ppa_state.json
scripts/: visualize_history.py
src/: visualize_agent.py  visualize_graph.py  visualize_hitl_v2_flow.py
src/ppa_agent/: __init__.py  agent.py  config.py  llm_providers.py  nodes.py  state.py
src/ppa_agentic_v2/: agent.py  config.py  graph.py  llm.py  llm_setup.py  nodes.py  prompts.py  run_agent.py  runner.py  server.py  state.py  test_print.py  tools.py
templates/: history_visualization_template.html  hitl_v2_simple_template.html  hitl_v2_visualization_template.html  hitl_v2_visualization_template_fixed.html
tests/: test_agent.py  test_agent_integration.py  test_integration.py
tests/output/: state-history.json
visualizations/: complete_info_result.html  complete_info_result.json  complete_info_state.json  missing_info_result.html  missing_info_result.json  missing_info_state.json  multi_turn_final_result.html  multi_turn_final_state.json  non_ppa_result.html  non_ppa_result.json  non_ppa_state.json
