[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ppa-agent"
version = "0.1.0"
description = "AI Agent for PPA insurance new business quoting process"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
langchain = "^0.3.23"
langchain-openai = "^0.3.12"
langchain-core = "^0.3.51"
typing-extensions = "^4.13.2"
openai = "^1.74.0"
tiktoken = "^0.9.0"
tenacity = "^9.1.2"
SQLAlchemy = "^2.0.40"
PyYAML = "^6.0.2"
requests = "^2.32.3"
orjson = "^3.10.16"
ormsgpack = "^1.9.1"
xxhash = "^3.5.0"
jsonpatch = "^1.33"
packaging = "^24.2"
tqdm = "^4.67.1"
regex = "^2024.11.6"
langgraph = "^0.3.29"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
httpx = "^0.28.1"
google-genai = "^1.10.0"
zstandard = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
ruff = "^0.11.5"
pre-commit = "^4.2.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.1"
addopts = "-ra -q"
testpaths = [
    "tests",
] 